# Chess-Companion-App

./: .gitignore  README.md  install-all-deps.sh  open-services-in-terminal.sh  package-lock.json  react-native.config.js  run-services.sh
Board-Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.engine-worker  api.py  auth.py  docker-compose.yml  pyproject.toml  restore_from_backup.sql  run-api.sh  schemas.py  supabase_client.py  supabase_schema.sql
Board-Backend/engine/: __init__.py  archive.py  config.py  jobs.py  keys.py  models.py  queue.py  routes.py  schemas.py  service.py  sse.py
Board-Backend/engine_worker/: __main__.py  analyse.py  publish.py
Board-Backend/game/: __init__.py  models.py  realtime.py  routes.py  service.py
Board-Backend/scripts/: ensure-redis.sh
Board-Backend/supabase/migrations/: 001_completed_games.sql  002_completed_games_abandoned.sql
Board-Backend/tests/: README.md  conftest.py  test_engine_routes.py
Board-Backend/tests/engine/: test_queue_phase0.py  test_sse.py  test_worker_mvp.py
Board-Backend/tests/framework/: __init__.py  online_session.py
Board-Backend/tests/integration/: test_engine_jobs_api.py  test_engine_sse.py  test_friend_game_happy_path.py  test_friend_game_sse_pubsub.py
Board-Firmware/: platformio.ini
Board-LLM/: .dockerignore  Dockerfile  README.md  llm_service.py  pyproject.toml  run-llm.sh  schemas.py
MyApp/: App.tsx  metro.config.js  package-lock.json  package.json
docker/: stack.yml
docs/: README.md  api-routes.md  complex-logic.md  database-schema.md
nimbus/: .gitignore  README.md  app.json  metro.config.js  package-lock.json  (+2 more)
(+100 files in other folders)
