[project]
name = "board-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Wasif",email = "wasif_farhan@hotmail.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "supabase (>=2.15.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic (>=2.7.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "loguru (>=0.7.3,<0.8.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "redis[hiredis] (>=5.0.0,<6)",
    "chess (>=1.10.0,<2)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
