[project]
name = "board-llm"
version = "0.1.0"
description = "LLM service for Board Application using Hugging Face"
authors = [
    {name = "Wasif", email = "wasif_farhan@hotmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.7.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "huggingface-hub (>=0.27.0,<0.28.0)",
    "transformers (>=4.47.0,<5.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

